--- a/css/estilo-quienes.css
+++ b/css/estilo-quienes.css
@@ -16,6 +16,10 @@ body {
     background-color: #593a81;
 }
 
+p{
+    color: #ffff;
+}
+
 #menu {
     background-color: #212529;
     opacity: 90%;
