--- a/css/estilo-inicio_sesion.css
+++ b/css/estilo-inicio_sesion.css
@@ -15,7 +15,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background: #E5E5E5;
     background-repeat: no-repeat;
-    background-image: url(../imagenes/bg4.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.605), rgba(0, 0, 0, 0)), url(../imagenes/fondo2prueba.webp);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
