Arreglos de css

--- a/css/estilo-inicio_sesion.css
+++ b/css/estilo-inicio_sesion.css
@@ -166,7 +166,7 @@ main {
 .formulario__input:focus {
     border: 3px solid #0075FF;
     outline: none;
-    box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
+    box-shadow: 3px 0px 30px rgb(168, 162, 162);
 }
 
 
@@ -436,6 +436,10 @@ span i{
 a {
     color: #FFFF;
     text-decoration: none;
+    font-family: 'Press Start 2P', cursive;
+}
+
+input{
     font-family: 'Press Start 2P', cursive;
 }
 
