--- a/css/estilo-index.css
+++ b/css/estilo-index.css
@@ -6,7 +6,8 @@
 
 body {
     background-color: #ffffff;
-    background-image: url(../imagenes/bg4.jpg);
+    background-image: url(../imagenes/back5.jpg);
+    background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
