--- a/css/estilo-index.css
+++ b/css/estilo-index.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Press Start 2P', cursive;
+
 }
 
 body {
@@ -13,8 +15,8 @@ body {
     /* ATRIBUTOS BACKGROUND DE BODY */
     display: flex;
     flex-direction: column;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Syne Mono', monospace;
+    font-family: 'Press Start 2P', cursive;
+
 }
 
 h1,
@@ -24,6 +26,8 @@ h4,
 h5,
 h6 {
     color: #ffffff;
+    font-family: 'Press Start 2P', cursive;
+
 }
 
 header {
@@ -40,25 +44,8 @@ header {
     /* ATRIBUTOS BACKGROUND DE LA SECCION PRODUCTOS */
 }
 
-#contenedor-articulo {
-    font-family: 'Syne Mono', monospace;
-}
-
-#contenedor-articulo2 {
-    font-family: 'Syne Mono', monospace;
-}
-
-#contenedor-articulo3 {
-    font-family: 'Syne Mono', monospace;
-}
-
-#contenedor-articulo4 {
-    font-family: 'Syne Mono', monospace;
-}
-
 .contenedor1 {
     color: #ffffff;
-    font-family: 'Syne Mono', monospace;
     margin: auto;
     max-width: 100%;
     overflow: hidden;
@@ -69,36 +56,26 @@ header {
 h1 {
     font-size: 50px;
 }
-
-
 /* CAMBIO COLOR LETRAS */
 
 .contenedor {
     margin: 5%;
     color: #ffffff;
-    font-family: 'Syne Mono', monospace;
 }
 
 .contenedor4 {
     color: #ffffff;
-    font-family: 'Syne Mono', monospace;
 }
 
 .contenedor5 {
     margin: 5%;
     color: #ffffff;
-    font-family: 'Syne Mono', monospace;
 }
 
 .contenedortext img {
     max-width: 100px;
     width: 200px;
 }
-
-.contenedortext h1{
-    font-family: 'Press Start 2P', cursive;
-}
-
 /* ATRIBUTOS GENERALES DE LA CAJA NAV */
 
 #menu {
@@ -144,12 +121,10 @@ h1 {
 
 #titulo {
     background-attachment: fixed;
-    background-image: url(../imagenes/tecno.jpg);
-    background-position: center center;
+    background-image: url(../imagenes/back5.jg);
+    background-position: center c;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 10px 100px / 120px;
-    border: 5mm ridge #5038a85b;
     display: flex;
     flex-direction: column;
     height: 360px;
@@ -157,33 +132,26 @@ h1 {
     margin: 100px;
     overflow: hidden;
     padding: 0px;
-    -webkit-border-radius: 10px 100px / 120px;
-    -moz-border-radius: 10px 100px / 120px;
-    -ms-border-radius: 10px 100px / 120px;
-    -o-border-radius: 10px 100px / 120px;
 }
 
 /* ATRIBUTOS GENERALES DE TITULO */
+
 
 #titulo li.titulotxt {
     color: rgb(255, 255, 255);
     font-family: 'Press Start 2P', cursive;
     font-size: 80px;
-    margin: 90px 0px;
     position: relative;
     text-align: center;
     text-shadow: 0.05em 0 0 #ff0000, -0.025em -0.05em 0 #05fc05, 0.025em 0.05em 0 #0000ffbf;
 }
 
-.servicios {
+li.servicios {
     color: white;
-    font-family: 'Syne Mono', monospace;
-    margin: 0px;
-    padding: 0px;
     position: relative;
     text-align: center;
     text-shadow: 0.05em 0 0 #ff0000, -0.025em -0.05em 0 #05fc05, 0.025em 0.05em 0 #0000ffbf;
-    top: -150px;
+    font-size:15px;
 }
 
 #lista li i{
@@ -607,11 +575,9 @@ a {
         /* ATRIBUTOS BORDER DE LA CAJA NAV */
     }
     #lista {
-        font-size: 10px;
-        margin: 0px -45px;
+        display: flex;
+        flex-direction: column;
         padding: 0px;
-        overflow: auto;
-        text-align: left;
     }
     div.vinculos-header {
         display: flex;
@@ -1019,7 +985,7 @@ a {
     /* ATRIBUTOS GENERALES DE TITULO */
     #titulo li.titulotxt {
         font-size: 80px;
-        margin: 90px 0px;
+        margin: 90px 0 50px 0;
     }
     .somos {
         position: relative;
