--- a/css/estilo-inicio_sesion.css
+++ b/css/estilo-inicio_sesion.css
@@ -12,10 +12,9 @@
 /*CUERPO*/
 
 body {
-    font-family: 'Roboto', sans-serif;
     background: #E5E5E5;
     background-repeat: no-repeat;
-    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../imagenes/back5.jpg);
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)), url(../imagenes/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
