--- a/css/estilo-quienes.css
+++ b/css/estilo-quienes.css
@@ -5,11 +5,9 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Syne Mono', monospace;
     /* ATRIBUTOS BACKGROUND DE BODY */
     background-repeat: no-repeat;
-    background-image: url(../imagenes/back5.jpg);
+    background-image: url(../imagenes/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
