--- a/css/estilo-registro.css
+++ b/css/estilo-registro.css
@@ -15,7 +15,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background: #E5E5E5;
     background-repeat: no-repeat;
-    background-image: url(../imagenes/back5.jpg);
+    background-image: url(../imagenes/bg4.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
