--- a/css/estilo-registro.css
+++ b/css/estilo-registro.css
@@ -267,7 +267,7 @@ main {
     cursor: pointer;
     transition: .1s ease all;
     font-family: 'Press Start 2P', cursive;
-    margin: 50px 0px;
+    margin: 60px 0px;
 }
 
 
@@ -321,8 +321,18 @@ main {
     margin: auto;
 }
 #telefono{
-    margin: 12px 0px;
     width: 100%;
+    background: #fff;
+    border: 3px solid transparent;
+    border-radius: 3px;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 40px 0 10px;
+    transition: .3s ease all;
+    -webkit-transition: .3s ease all;
+    -moz-transition: .3s ease all;
+    -ms-transition: .3s ease all;
+    -o-transition: .3s ease all;
 }
 
 #grupo__telefono{
