--- a/css/estilo-version_pro.css
+++ b/css/estilo-version_pro.css
@@ -12,7 +12,7 @@ header {
 body{
     font-family: 'Press Start 2P', cursive;
     background-color: #ffffff;
-    background-image: url(../imagenes/back5.jpg);
+    background-image: url(../imagenes/bg4.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
