--- a/css/estilo-inicio_sesion.css
+++ b/css/estilo-inicio_sesion.css
@@ -26,7 +26,7 @@ header {
     max-width: 100%;
     width: 90%;
 }
-
+/* Barra de navegación, atributos generales*/
 #menu {
     background-color: #212529;
     opacity: 90%;
