--- a/css/estilo-registro.css
+++ b/css/estilo-registro.css
@@ -550,6 +550,141 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+    .container{
+        margin: auto;
+    }
+    .container .btn-menu{
+        float: left;
+        line-height: 100px;
+    }
+    .container .btn-menu label{
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        cursor: pointer;
+    }
+    
+    .fa-bars{
+        background-color: rgb(51, 45, 45);
+        padding: 15px;
+        border-radius: 100% ;
+        -webkit-border-radius: 100% ;
+        -moz-border-radius: 100% ;
+        -ms-border-radius: 100% ;
+        -o-border-radius: 100% ;
+}
+    
+    /*Menù lateral*/
+    #btn-menu{
+        display: none;
+    }
+    .container-menu{
+        position: absolute;
+        background: rgba(0,0,0,0.5);
+        top: 0;
+        left: 0;
+        transition: all 500ms ease;
+        opacity: 0;
+        visibility: hidden;
+        -webkit-transition: all 500ms ease;
+        -moz-transition: all 500ms ease;
+        -ms-transition: all 500ms ease;
+        -o-transition: all 500ms ease;
+}
+    #btn-menu:checked ~ .container-menu{
+        opacity: 1;
+        visibility: visible;
+    }
+    .cont-menu{
+        background: #1c1c1c;
+        transition: all 500ms ease;
+        transform: translateX(-100%);
+        z-index: 100;
+        height: 80px;
+        max-width: 1550px;
+        width: 100%;
+        position: fixed;
+        -webkit-transition: all 500ms ease;
+        -moz-transition: all 500ms ease;
+        -ms-transition: all 500ms ease;
+        -o-transition: all 500ms ease;
+        -webkit-transform: translateX(-100%);
+        -moz-transform: translateX(-100%);
+        -ms-transform: translateX(-100%);
+        -o-transform: translateX(-100%);
+}
+    #btn-menu:checked ~ .container-menu .cont-menu{
+        transform: translateX(0%);
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+}
+    .cont-menu nav{
+        transform: translateY(15%);
+        font-family: 'Press Start 2P', cursive;
+        display: flex;
+        height: 75px;
+        border-radius: 100%;
+        -webkit-border-radius: 100%;
+        -moz-border-radius: 100%;
+        -ms-border-radius: 100%;
+        -o-border-radius: 100%;
+        -webkit-transform: translateY(15%);
+        -moz-transform: translateY(15%);
+        -ms-transform: translateY(15%);
+        -o-transform: translateY(15%);
+}
+    .cont-menu nav a{
+        display: block;
+        text-decoration: none;
+        height: 50px;
+        padding: 0 70px;
+        font-size: 15px;
+        display: flex;
+        color: #c7c7c7;
+        transition: all 400ms ease;
+        -webkit-transition: all 400ms ease;
+        -moz-transition: all 400ms ease;
+        -ms-transition: all 400ms ease;
+        -o-transition: all 400ms ease;
+}
+    .cont-menu nav a:hover{
+        transform: scale(1.15);
+        -webkit-transform: scale(1.15);
+        -moz-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+        -o-transform: scale(1.15);
+}
+    .cont-menu label{
+        position: absolute;
+        right: 5px;
+        top: 10px;
+        color: #fff;
+        cursor: pointer;
+        font-size: 18px;
+    }
+    
+    .icono{
+        padding: 0 20px 0 0;
+        font-size: 30px;
+    }
+    
+    nav a{
+        font-size: 10px;
+    }
+    
+    .corona:hover{
+        color: gold;
+    }
+    
+    #finalmenu{
+        visibility: hidden;
+    }
+    
+    .fa-xmark{
+        font-size: 40px;
+    }
+
     #menu {
         width: 90%;
         justify-content: center;
