--- a/productos/templates/productos/quienes_somos.html
+++ b/productos/templates/productos/quienes_somos.html
@@ -18,20 +18,20 @@
             <section id="contMenu">
                 <ul id="lista">
                     <li>
-                        <a href="index2"> <i class="fa-solid fa-house"></i>Inicio</a>
+                        <a href="/index2"> <i class="fa-solid fa-house"></i>Inicio</a>
                     </li>
                     <li>
 
-                        <a href="contacto" target="_blank"><i class="fa-solid fa-phone"></i>Contacto</a></li>
+                        <a href="/contacto" target="_blank"><i class="fa-solid fa-phone"></i>Contacto</a></li>
                     <li>
-                        <a href="quienes-somos"><i class="fa-solid fa-users"></i>Quiénes somos</a>
+                        <a href="/quienes-somos"><i class="fa-solid fa-users"></i>Quiénes somos</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa-solid fa-gear"></i>Ajustes</a>
                     </li>
                     <li>
 
-                        <a href="version-pro"><i class="fa-solid fa-crown"></i>Pro</a>
+                        <a href="/version-pro"><i class="fa-solid fa-crown"></i>Pro</a>
                     </li>
                 </ul>
             </section>
