--- a/productos/templates/productos/version_pro.html
+++ b/productos/templates/productos/version_pro.html
@@ -26,18 +26,18 @@
                 <ul id="lista">
                     <li>
                         <i class="fa-solid fa-house"></i>
-                        <a href="index2">Inicio</a>
+                        <a href="/index2">Inicio</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-user"></i>
-                        <a href="inicio-sesion">Iniciar Sesión</a>
+                        <a href="/inicio-sesion">Iniciar Sesión</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-phone"></i>
-                        <a href="contacto" target="_blank">Contacto</a></li>
+                        <a href="/contacto" target="_blank">Contacto</a></li>
                     <li>
                         <i class="fa-solid fa-users"></i>
-                        <a href="quienes-somos">Quiénes somos</a>
+                        <a href="/quienes-somos">Quiénes somos</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-gear"></i>
