--- a/productos/templates/productos/index2.html
+++ b/productos/templates/productos/index2.html
@@ -31,11 +31,11 @@
 <div class="container-menu">
 	<div class="cont-menu">
 		<nav>
-            <a href="inicio_sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
-            <a href="contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
-            <a href="quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
+            <a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
+            <a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
+            <a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
             <a href="#"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
-            <a class="corona" href="version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
+            <a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
             <i id="finalmenu" class="fa-solid fa-globe"></i>
 		</nav>
 		<label for="btn-menu"><i class="fa-solid fa-xmark"></i></label>
