UPDATE CLASE LUNES

--- a/productos/templates/account/login.html
+++ b/productos/templates/account/login.html
@@ -20,6 +20,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% if user.is_authenticated %}
   <h1>Autenticado con Google<h1>
 {% endif %}
+<button type="button" class="btn btn-primary">Primary</button>
 <div class="socialaccount_ballot">
 
   <ul class="socialaccount_providers">
