--- a/productos/templates/account/logout.html
+++ b/productos/templates/account/logout.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-
+{%load static%}
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
-
+<link rel="stylesheet" href="{% static 'productos/css/estilo-index.css'%}">
 {% block content %}
 <h1>{% trans "Sign Out" %}</h1>
 
@@ -14,7 +14,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
 </form>
 
 
