--- a/productos/templates/productos/subir_img.html
+++ b/productos/templates/productos/subir_img.html
@@ -1,15 +1,21 @@
-
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <title>Producto con IMG</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{% static 'productos/css/estilo-simg.css'%}">
 </head>
 <body>
-    <form method = "post" enctype="multipart/form-data">
+    <form method = "post" class="clase-form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Subir</button>
+        <button type="submit" class = "save btn btn-default">Subir</button>
+        <button type="reset" class = "btn btn-secondary">Reset</button>
     </form>
 </body>
+
 </html>
