Ajuste Listar-Agregar-Modificar-Eliminar

--- a/productos/templates/productos/modificar.html
+++ b/productos/templates/productos/modificar.html
@@ -19,6 +19,7 @@
             </div>
             <input type="submit" class="btn btn-danger" id="enviar" value="Modificar">
             <input type="reset" class="btn btn-primary" id="limpiar" value="Limpiar">
+            <a class="btn btn-danger" href="{% url 'ListarProducto' %}" role="button">Volver</a>
             <div id="error" class="alert alert-success" role="alert">
                 {{ mensaje }}
             </div>
